# EasyClip

./: .gitignore  FFMPEG_NOTES.txt  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
packaging/: app.icns  easyclip.spec
scripts/: build_release.ps1  build_release.sh  fetch_ffmpeg_vendor.py
src/easyclip/: __init__.py  _version.py  app.py
src/easyclip/annotation/: __init__.py  annotation_page.py  project.py  settings.py
src/easyclip/annotation/widgets/: __init__.py  annotation_draft_panel.py  annotation_editor.py  chat_view.py  draft_editor.py  frame_selector.py  llm_panel.py  thumbnail_strip.py
src/easyclip/core/: __init__.py  align.py  align_io.py  export.py  export_debug.py  ffmpeg_bootstrap.py  ffmpeg_util.py  project.py  settings.py  subtitle.py  theme.py  timebase.py  waveform_gen.py
src/easyclip/i18n/: __init__.py  strings.py
src/easyclip/plugins/: __init__.py  stubs.py
src/easyclip/widgets/: __init__.py  main_window.py  slicing_page.py  subtitle_overlay.py  timeline_widget.py  video_preview_drop_shim.py  video_preview_widget.py  waveform_widget.py
